k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-app-service
  namespace: quote-k8s-python
spec:
  selector:
    app: quote-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
